# protocol-task

./: .pre-commit-config.yaml  Makefile  compile.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  codecov.yml  publish.yml
protocol_task/: protocol_class.py  task_executors.py
protocol_task_example/tasks/: __init__.py
